make PersonDataCreator faster from 4s to 1.2s